# stock-dashboard

./: app.py  pyproject.toml  secrets.toml
pages/: 1_Login.py  2_Portfolio.py
