[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "streamlit-authenticator>=0.4.2",
    "textblob>=0.19.0",
    "yfinance>=0.2.66",
]
